# parsertime

./: .env.example  .eslintrc.json  .gitignore  .impeccable.md  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CLAUDE.md  DESIGN.json  DESIGN.md  LICENSE  PRODUCT.md  README.md  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  partykit.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  railway.json  tailwind.config.ts  tsconfig.json  turbo.json  vercel.json  vitest.config.ts
.agents/: product-marketing-context.md
.deepsec/: README.md  deepsec.config.ts
.zed/: settings.json
api/map-align/: align.py  index.py  pyproject.toml  test_align.py
api/wp-train/: harness.py  index.py  pyproject.toml  serialize.py  train_gbm.py
docs/: metrics.md  tsr-spec.md  wp-gbm-bakeoff-findings.md  wp-model-card.md
messages/: en.json  fr.json  ko.json  zh.json
prisma/: schema.prisma
sample/: Log-2023-11-07-22-31-58_parsed.xlsx
scripts/: backfill-push-winners.ts  calculate-all-stats.ts  calculate-spatial-stats.ts  calculate-ult-stats.ts  faceit-link-dry-run.ts  faceit-player-dry-run.ts  faceit-team-dry-run.ts  fix-calculated-stats-timestamps.sql  fsr-bootstrap.ts  fsr-dry-run.ts  generate-halftone.ts  migrate-avatars-to-r2.ts  migrate-to-r2.ts  migrate-winrate-tracker.ts  preview-calculated-stats-timestamp-changes.sql  seed-patches.ts  seed-scouting-data.ts  seed-scouting-players.ts  tsr-bootstrap.ts  (+2 more)
scripts/map-align/: .gitignore  README.md  align.py  batch.py  pyproject.toml  test_align.py  test_batch.py
src/: i18n.ts  (+4 more)
(+2794 files in other folders)
