[project]
name = "map-align"
version = "0.1.0"
description = "Local CLI: align a new map render to the calibrated image and print the pixel transform"
requires-python = ">=3.9"
dependencies = [
  # numpy<2: opencv wheels are compiled against numpy 1.x.
  "numpy>=1.24,<2",
  "opencv-python-headless>=4.8,<5",
]

[dependency-groups]
dev = ["pytest>=8,<9"]
